# kvsparser

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
example/: parser.py
src/: __init__.py  kvsparser.py
tests/: conftest.py  test_kvsparser.py
