# pyproject.toml
[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["--import-mode=importlib"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
omit = [
    "src/*/__init__.py",
    "tests/*",
]