[metadata]
name = kvsparser
version = attr: src.__version__
author = Alexander Rose
description = Parsing AWS Kinesis Video Streams.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT-0
license_file = LICENSE
platform = any
url = https://github.com/rosealexander/kvsparser
classifiers =
  Intended Audience :: Developers
  Natural Language :: English
  Development Status :: 5 - Production/Stable
  License :: OSI Approved :: MIT No Attribution License (MIT-0)
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Information Analysis
  Topic :: Utilities

[options]
python_requires = >= 3.8
packages =
  kvsparser
package_dir =
  kvsparser = src
install_requires =
  av
  imageio
  ebmlite
  importlib-metadata; python_version<"3.8"
